header fixes
hide header overflow which would otherwise occur during page resize (narrower)
base canvas width on header width, not 'window.innerWidth'. this accounts for scrollbar.

--- a/subfusc/static-src/sass/header.sass
+++ b/subfusc/static-src/sass/header.sass
@@ -13,6 +13,7 @@ header
     /*border-bottom: 5px solid rgb(60, 75, 100) */
     box-shadow: inset 0 -10px 35px rgba(0,0,0,0.1)
     position: relative
+    overflow: hidden
 
     &:hover
         nav 
